<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95d85b">

    <Button
        android:id="@+id/buttonDodajResurs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dodajPlodoveResurs" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/resursRec"
        android:layout_below="@+id/buttonDodajResurs"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#95d85b"
        android:visibility="visible">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/relDodajResurs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/resursRec"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:visibility="invisible">


        <TextView
            android:id="@+id/txtVrsta"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/vrstaResurs"
            android:textSize="25sp" />


        <EditText
            android:id="@+id/editVrsta"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/txtVrsta"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtKolicina"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/editVrsta"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/kolicinaResurs"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editKolicina"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/txtKolicina"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editKolicina"
            android:layout_marginTop="16dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="1.0dip"
            android:paddingLeft="4.0dip"
            android:paddingRight="4.0dip"
            android:paddingTop="5.0dip">

            <Button
                android:id="@+id/allow"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/btnDodajResurs" />

            <Button
                android:id="@+id/deny"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/btnOtkaziResurs" />

        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relDodajResurs2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/resursRec"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:visibility="invisible">


        <TextView
            android:id="@+id/txtVrsta2"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/vrstaResurs"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editVrsta2"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/txtVrsta2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtKolicina2"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/editVrsta2"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/kolicinaResurs"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editKolicina2"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/txtKolicina2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editKolicina2"
            android:layout_marginTop="16dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="1.0dip"
            android:paddingLeft="4.0dip"
            android:paddingRight="4.0dip"
            android:paddingTop="5.0dip">

            <Button
                android:id="@+id/allow2"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/btnSacuvajResurs" />

            <Button
                android:id="@+id/delete2"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/btnObrisiResurs" />

            <Button
                android:id="@+id/deny2"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/btnOtkaziResurs" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>